--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion rootProject.compileSdkVersion
 
+    dataBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "tech.thdev.tacademysampleapp"
         minSdkVersion rootProject.minSdkVersion
@@ -30,10 +34,6 @@ android {
     androidExtensions {
         experimental = true
     }
-
-    dataBinding {
-        enabled true
-    }
 }
 
 dependencies {
@@ -43,6 +43,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     implementation "com.android.support:design:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:customtabs:$rootProject.supportLibraryVersion"
     implementation "com.android.support.constraint:constraint-layout:$rootProject.constraintVersion"
 
     implementation "android.arch.lifecycle:extensions:$rootProject.lifecycleVersion"
@@ -67,6 +68,10 @@ dependencies {
     // https://github.com/bumptech/glide
     implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
     kapt "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
+
+    // ButterKnife
+    implementation "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
+    kapt "com.jakewharton:butterknife-compiler:$rootProject.butterknifeVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
